--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.21",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/redux-form": "^8.3.3",
     "axios": "^0.24.0",
+    "classnames": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "17.0.2",
     "redux": "^4.1.2",
     "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
