--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "myWayTypeScript",
+  "name": "social_network",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://OlegWeremyew.github.io/myWayTypeScript",
+  "homepage": "https://OlegWeremyew.github.io/social_network",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
