--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/redux-form": "^8.3.3",
     "axios": "^0.24.0",
     "classnames": "^2.2.6",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
