--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.21",
     "@types/react-test-renderer": "^17.0.1",
     "@types/redux-form": "^8.3.3",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.24.0",
     "classnames": "^2.2.6",
     "formik": "^2.2.9",
@@ -28,6 +29,7 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
