--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.2.6",
     "formik": "^2.2.9",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -28,6 +29,7 @@
     "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
+    "sass": "^1.50.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
