--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
     "jsx-a11y/click-events-have-key-events": "off",
     "react/no-array-index-key": "off",
     "jsx-a11y/control-has-associated-label": "off",
+    "react/no-unescaped-entities": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
